deployment/k8s/overlays/uni-server-registry/patches/delete-python-ai-deployment.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-ai-service
