deployment/k8s/overlays/uni-server-registry/patches/envoy-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: searchess
spec:
  type: LoadBalancer
