deployment/k8s/overlays/uni-server-registry/patches/lichess-bot-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lichess-bot
  namespace: searchess
spec:
  replicas: 1
