deployment/k8s/overlays/uni-server-registry/patches/web-ui-deploy-sha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
spec:
  template:
    metadata:
      annotations:
        deploy-sha: "sha-080d9b7"
